k8/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport-nodejs
spec:
  type: NodePort
  ports:
    - name: http-port
      port: 80
      targetPort: 3000
      nodePort: 32300
  selector:
    app: server-app
