k8/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-nodejs
spec:
  defaultBackend:
    service:
      name: appnodejs-internal-service
      port:
        number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress-nodejs
# spec:
#   rules:
#   - host: myservicea.foo.org
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: appnodejs-internal-service
#             port: 
#               number: 8080
#   ingressClassName: nginx
