k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-nodejs
spec:
  defaultBackend:
    service:
      name: appnodejs-internal-service
      port:
        number: 8080
